--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HexapodApp</string>
+    <string name="client_endpoint">a1pasyph6h7pts.iot.eu-west-1.amazonaws.com</string>
+    <string name="app_to_hexapod_topic">APP_TO_HEXAPOD</string>
+    <string name="hexapod_to_app_topic">HEXAPOD_TO_APP_TOPIC</string>
 </resources>
