--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">HexapodApp</string>
+    <string name="app_name">Hexapod</string>
     <string name="client_endpoint">a1pasyph6h7pts.iot.eu-west-1.amazonaws.com</string>
-    <string name="app_to_hexapod_topic">APP_TO_HEXAPOD</string>
-    <string name="hexapod_to_app_topic">HEXAPOD_TO_APP_TOPIC</string>
+    <string name="cognito_pool_id">eu-west-1:5b9f1d9c-95c3-4a77-8431-5187c64742fe</string>
+    <string name="camera_topic">hexapod/camera</string>
+    <string name="status_topic">hexapod/status</string>
+    <string name="command_topic">hexapod/command</string>
 </resources>
